fixed blog search size on smaller screens to 90%

--- a/css/blog.css
+++ b/css/blog.css
@@ -87,7 +87,7 @@ mark {
 
 @media screen and (max-width: 768px) { /* mobile devices & tablets - screen width <= 768px */
     .search {
-        width: 90;
+        width: 90%;
     }
     
     .posts {
